# juggle-mail

./: .gitignore  .justfile  Cargo.toml  PRIVACY-POLICY  README.md  flake.nix
.github/workflows/: main.yml
android/: Cargo.toml  manifest.yaml
android/src/: lib.rs
assets/: config.toml
assets/difficulty/game_time/: _list.ron
assets/difficulty/lives/: _list.ron
assets/difficulty/time_scale/: _list.ron
assets/font/: chars.txt
assets/houses/: _list.ron
assets/shaders/: mesh3d.glsl  sprite.glsl
assets/skins/: _list.ron
docker/: .justfile  Dockerfile
dynamic-deps/: Cargo.toml
dynamic-deps/src/: lib.rs
src/: assets.rs  camera.rs  config.rs  controls.rs  draw.rs  draw3d.rs  final_screen.rs  font.rs  leaderboard.rs  leaderboard_screen.rs  lib.rs  main.rs  main_menu.rs  ui.rs  update.rs  util.rs
src/game/: controls.rs  draw.rs  mod.rs  particle.rs  update.rs
