[workspace]
members = ["android"]

[package]
name = "juggle-mail"
version = "0.1.0"
edition = "2021"

[features]
default = []
dynamic = ["dep:dynamic-deps"]
leaderboard = []

[dependencies]
dynamic-deps = { path = "dynamic-deps", optional = true }
geng.git = "https://github.com/geng-engine/geng"
jornet.git = "https://github.com/kuviman/jornet"
serde = "1"
